oase-api/test-e2e-log.txt

> oase-api@1.0.0 test:e2e
> jest --config ./test/jest-e2e.json

FAIL test/app.e2e-spec.ts
  ● Test suite failed to run

    Jest encountered an unexpected token

    Jest failed to parse a file. This happens e.g. when your code or its dependencies use non-standard JavaScript syntax, or when Jest is not configured to support such syntax.

    Out of the box Jest supports Babel, which will be used to transform your files into valid JS based on your Babel configuration.

    By default "node_modules" folder is ignored by transformers.

    Here's what you can do:
     • If you are trying to use ECMAScript Modules, see https://jestjs.io/docs/ecmascript-modules for how to enable it.
     • If you are trying to use TypeScript, see https://jestjs.io/docs/getting-started#using-typescript
     • To have some of your "node_modules" files transformed, you can specify a custom "transformIgnorePatterns" in your config.
     • If you need a custom transformation specify a "transform" option in your config.
     • If you simply want to mock your non-JS modules (e.g. binary assets) you can stub them out with the "moduleNameMapper" config option.

    You'll find more details and examples of these config options in the docs:
    https://jestjs.io/docs/configuration
    For information about custom transformations, see:
    https://jestjs.io/docs/code-transformation

    Details:

    C:\wamp64\www\oase\oase-api\node_modules\@scure\base\index.js:366
    export const utils = /* @__PURE__ */ Object.freeze({
    ^^^^^^

    SyntaxError: Unexpected token 'export'

    [0m [90m 1 |[39m [36mimport[39m { [33mInjectable[39m } [36mfrom[39m [32m'@nestjs/common'[39m[33m;[39m
     [90m 2 |[39m [36mimport[39m { [33mConfigService[39m } [36mfrom[39m [32m'@nestjs/config'[39m[33m;[39m
    [31m[1m>[22m[39m[90m 3 |[39m [36mimport[39m { generateSecret[33m,[39m generateURI[33m,[39m verify } [36mfrom[39m [32m'otplib'[39m[33m;[39m
     [90m   |[39m [31m[1m^[22m[39m
     [90m 4 |[39m [36mimport[39m { createCipheriv[33m,[39m createDecipheriv[33m,[39m randomBytes } [36mfrom[39m [32m'crypto'[39m[33m;[39m
     [90m 5 |[39m
     [90m 6 |[39m [33m@[39m[33mInjectable[39m()[0m

      at Runtime.createScriptFromCode (../node_modules/jest-runtime/build/index.js:1505:14)
      at Object.<anonymous> (../node_modules/@otplib/plugin-base32-scure/src/index.ts:42:5)
      at Object.<anonymous> (../node_modules/otplib/src/defaults.ts:25:5)
      at Object.<anonymous> (../src/auth/mfa.service.ts:3:1)
      at Object.<anonymous> (../src/auth/auth.service.ts:11:1)
      at Object.<anonymous> (../src/auth/auth.controller.ts:6:1)
      at Object.<anonymous> (../src/auth/auth.module.ts:5:1)
      at Object.<anonymous> (../src/app.module.ts:10:1)
      at Object.<anonymous> (app.e2e-spec.ts:4:1)

Test Suites: 1 failed, 1 total
Tests:       0 total
Snapshots:   0 total
Time:        9.609 s
Ran all test suites.
